--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,3 @@
 @import "./css/reset.css";
 @import url("https://fonts.googleapis.com/css?family=Open+Sans&display=swap");
-@import "./css/main.css";
+@import "./css/main.scss";
